err/archetypes.multifile.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/archetypes'...
Listing './lib/python3.5/site-packages/archetypes/multifile'...
Compiling './lib/python3.5/site-packages/archetypes/multifile/MultiFileField.py'...
***   File "./lib/python3.5/site-packages/archetypes/multifile/MultiFileField.py", line 262
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/archetypes/multifile/locales'...
Listing './lib/python3.5/site-packages/archetypes/multifile/locales/cs'...
Listing './lib/python3.5/site-packages/archetypes/multifile/locales/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/archetypes/multifile/locales/da'...
Listing './lib/python3.5/site-packages/archetypes/multifile/locales/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/archetypes/multifile/locales/en'...
Listing './lib/python3.5/site-packages/archetypes/multifile/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/archetypes/multifile/locales/fr'...
Listing './lib/python3.5/site-packages/archetypes/multifile/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/archetypes/multifile/locales/pt_BR'...
Listing './lib/python3.5/site-packages/archetypes/multifile/locales/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/archetypes/multifile/profiles'...
Listing './lib/python3.5/site-packages/archetypes/multifile/profiles/default'...
Listing './lib/python3.5/site-packages/archetypes/multifile/skins'...
Listing './lib/python3.5/site-packages/archetypes/multifile/skins/archetypes.multifile'...
Compiling './lib/python3.5/site-packages/archetypes/multifile/skins/archetypes.multifile/at_multi_download.py'...
***   File "./lib/python3.5/site-packages/archetypes/multifile/skins/archetypes.multifile/at_multi_download.py", line 14
    return field.download(context, name)
                                       ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/archetypes/multifile/tests'...
Listing './lib/python3.5/site-packages/archetypes.multifile-1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
